check4.log
    Checking livana-backend-v2 v0.1.0 (C:\Users\yamit\Downloads\Desktop\livanaFinalbackend\backend-services)
error[E0432]: unresolved import `validator`
 --> src\handlers\reviews.rs:8:5
  |
8 | use validator::Validate;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `validator`
  |
  = help: if you wanted to use a crate named `validator`, use `cargo add validator` to add it to your `Cargo.toml`

error[E0432]: unresolved import `validator`
 --> src\dtos\reviews.rs:3:5
  |
3 | use validator::Validate;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `validator`
  |
  = help: if you wanted to use a crate named `validator`, use `cargo add validator` to add it to your `Cargo.toml`

error: cannot find attribute `validate` in this scope
 --> src\dtos\reviews.rs:9:7
  |
9 |     #[validate(range(min = 1, max = 5, message = "Rating must be between 1 and 5"))]
  |       ^^^^^^^^

error[E0599]: no method named `validate` found for struct `CreateReviewDto` in the current scope
  --> src\handlers\reviews.rs:26:34
   |
26 |     if let Err(errors) = payload.validate() {
   |                                  ^^^^^^^^ method not found in `CreateReviewDto`
   |
  ::: src\dtos\reviews.rs:7:1
   |
 7 | pub struct CreateReviewDto {
   | -------------------------- method `validate` not found for this struct
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `validate`, perhaps you need to implement it:
           candidate #1: `webpki::verify_cert::ExtendedKeyUsageValidator`

Some errors have detailed explanations: E0432, E0599.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `livana-backend-v2` (bin "livana-backend-v2") due to 4 previous errors
